<resources>
    <string name="app_name">MovieHub</string>
    <string name="title_activity_live_streaming">LiveStreaming</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="posters">posters</string>
    <string name="facebook_app_id">430053571073200</string>
    <string name="fb_login_protocol_scheme">fb430053571073200</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Videos</string>
    <string name="title_notifications">Notifications</string>

    <!--Login activity String-->
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="facebook">FACEBOOK</string>
    <string name="twitter">TWITTER</string>
    <string name="gmail">GMAIL</string>

    <!--Signup Activity String -->
    <string name="firstname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_type">Account Type: </string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="change_language">Change Language</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_premium">Go Premium</string>
    <string name="become_uploader">Become Uploader</string>
    <string name="french">French</string>
    <string name="search">Search</string>
    <string name="english">English</string>
    <string name="add_video">Add Video</string>
    <string name="log_out">Log out</string>

</resources>
